kinda fixed this texture stuff idk this is wierd

--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <ClCompile Include="src\physics\AxisAlignedBoundingBox.cpp" />
     <ClCompile Include="src\physics\BoundingSphere.cpp" />
+    <ClCompile Include="src\physics\Collidable.cpp" />
     <ClCompile Include="src\physics\IntersectData.cpp" />
     <ClCompile Include="src\rendering\Object.cpp" />
     <ClCompile Include="src\Config.cpp" />
@@ -266,6 +267,7 @@
   <ItemGroup>
     <ClInclude Include="src\physics\AxisAlignedBoundingBox.h" />
     <ClInclude Include="src\physics\BoundingSphere.h" />
+    <ClInclude Include="src\physics\Collidable.h" />
     <ClInclude Include="src\physics\IntersectData.h" />
     <ClInclude Include="src\rendering\Object.h" />
     <ClInclude Include="src\Config.h" />
