--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -172,6 +172,7 @@
   <ItemGroup>
     <None Include="imgui.ini" />
     <None Include="res\shaders\Basic.shader" />
+    <None Include="res\shaders\Window.shader" />
     <None Include="src\vendor\glm\detail\func_common.inl" />
     <None Include="src\vendor\glm\detail\func_common_simd.inl" />
     <None Include="src\vendor\glm\detail\func_exponential.inl" />
